# BestFTP

./: .gitignore  1.bat  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: clean-git-history.ps1
src/: App.css  App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  bestftp.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: BestFTP.exe.manifest  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  reconnect.rs  sftp_ops.rs  utils.rs
src-tauri/src/commands/: common.rs  connection.rs  mod.rs  system.rs
src-tauri/src/commands/common/: mod.rs  sftp_helper.rs
src-tauri/src/commands/fs/: config.rs  listing.rs  manipulation.rs  mod.rs  search.rs
src-tauri/src/commands/transfer/: download.rs  io.rs  mod.rs  move_op.rs  progress.rs  upload.rs
src/components/: TitleBar.css  TitleBar.tsx
src/components/dashboard/: Breadcrumbs.tsx  ContextMenu.tsx  Dialogs.tsx  DragGhost.tsx  DropOverlay.tsx  EditorDialog.css  EditorDialog.tsx  FileList.tsx  Pane.tsx  Sidebar.tsx  StatusBar.css  StatusBar.tsx  ToastList.tsx  VideoViewer.tsx
src/hooks/: useDashboardColumnResize.ts  useDashboardContextMenu.ts  useDashboardDragDrop.ts  useFileOperations.ts  useFileSystem.ts  useKeybindings.ts  useToasts.ts  useTransferQueue.ts
src/lib/: tauri-api.ts
src/pages/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
src/themes/: index.ts  monaco-themes.ts
src/utils/: api.ts  fileIcons.tsx
