[package]
name = "BestFTP"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
[lib]
name = "best_ftp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "6.0", features = ["async-default-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures-lite = "2.0"
pin-project = "1.1"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
] }

